force-app/main/default/objects/RFI_Response__c/RFI_Response__c.object-meta.xml
<CustomObject>
    <label>BT RFI Response</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>RFI Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT RFI Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>