force-app/main/default/objects/RFI_Response__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>RFI_Response__c</referenceTo>
    <relationshipName>RFI_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>