force-app/main/default/objects/RFI_Response__c/fields/RFI__c.field-meta.xml
<CustomField>
    <fullName>RFI__c</fullName>
    <label>RFI</label>
    <referenceTo>RFI__c</referenceTo>
    <relationshipName>RFI_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>